--- a/gb/21/6/20/n13035206.md
+++ b/gb/21/6/20/n13035206.md
@@ -1,22 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nvtqmy391/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nvtqmy391/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nvtqmy391/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nvtqmy391/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nvtqmy391/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nvtqmy391/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nvtqmy391/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nvtqmy391/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nvtqmy391/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nvtqmy391/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nvtqmy391/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nvtqmy391/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nvtqmy391/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nvtqmy391/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nvtqmy391/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>林辉：背叛中共的三名高官带来的重创</h2>
-
-<h6></h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>林辉：中共三名高官叛逃带来的重创</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13024797-2-beijing-GettyImages-172631987-600x400.jpg" />
+<h6>近日，中共连发声“永不叛党”，凸显其恐慌心态。这里盘点曾经背叛中共的三名高官带给中共怎样的重创。图为2013年7月4日天安门广场。(Feng Li/Getty Images)
+</h6>
 <hr>
 	<p>【大纪元2021年06月21日讯<strong>】</strong>近日，习近平继在青海考察时提出“崇尚对党忠诚的大德”的要求，并要求中共党员莫要忘记入党时做的“对党忠诚、永不叛党的誓言”后，又于6月18日亲率中共政治局委员等几十名高官，前往历史展览馆，重温入党誓词。19日，中纪委监察网站头条发文：《永不叛党不仅仅是一句誓言》。</p>
-<p>诡异的是，文章近三分之二的篇幅都在讲述1931年背叛中共的时任中共中央政治局候补委员、特科负责人的<ahref="https://github.com/nvtqmy391/djy/blob/master/gb/tag/%E9%A1%BE%E9%A1%BA%E7%AB%A0.md#1">顾顺章</a>，讲述他给中共带来的重创以及中共将其开除出党并“号召与其斗争”的文件，讲述其在狱中惨死。之后，以这个反面教材告诉中共高官，或者已经外逃的高官，千万不要背叛中共，否则下场很惨。笔者非常想知道，中共高官们读到这篇文章后有何感触，难道真的会被吓住，再不生异心吗？显然未必。</p>
+<p>诡异的是，文章近三分之二的篇幅都在讲述1931年背叛中共的时任中共中央政治局候补委员、特科负责人的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A1%BE%E9%A1%BA%E7%AB%A0.md#1">顾顺章</a>，讲述他给中共带来的重创以及中共将其开除出党并“号召与其斗争”的文件，讲述其在狱中惨死。之后，以这个反面教材告诉中共高官，或者已经外逃的高官，千万不要背叛中共，否则下场很惨。笔者非常想知道，中共高官们读到这篇文章后有何感触，难道真的会被吓住，再不生异心吗？显然未必。</p>
 <p>不过，借着中共自爆其丑，笔者也凑个热闹，说说曾经背叛中共的三名高官带给中共怎样的重创。</p>
-<p><strong><ahref="https://github.com/nvtqmy391/djy/blob/master/gb/tag/%E9%A1%BE%E9%A1%BA%E7%AB%A0.md#1">顾顺章</a>背叛</strong><strong>? </strong><strong>周恩来差点被捕</strong></p>
+<h2><strong><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A1%BE%E9%A1%BA%E7%AB%A0.md#1">顾顺章</a>背叛</strong><strong>? </strong><strong>周恩来差点被捕</strong></h2>
 <p>早年顾顺章曾加入青帮，参加过工人运动，后加入中共，1926年和陈赓等人被中共派往苏联学习间谍技术。回国后，担任工人稽查队队长。1927年4月国民党“清党”后，他在八七会议上，被选为临时中央政治局委员兼任中央交通局局长，负责中共中央特科的组织和领导工作。1928年6月在中共六大上当选为中央委员。此后长期在上海与周恩来负责中共地下活动。</p>
-<p>顾为人狡猾多智、沉默寡言、但比较精明能干，曾杀死过许多叛离中共的人员，声名远扬。他的公开身份是著名魔术师化广奇，后在一次表演时被国民党识破，被捕。他在被捕后，很快供出了中共在武汉的地下交通机关和红二军团驻武汉办事处，致使10多人被捕被杀。随后在要求面见蒋介石后，又供出了中共中央在上海的机关和主要领导人，包括在上海从事情报工作的周恩来也差点被俘，致使当时上海等地的地下党机构几乎完全被摧毁，多人被捕杀。因顾顺章被杀的中共领导人有恽代英、蔡和森、盛忠亮、黄文杰，其他领导人王明、康生、博古、张闻天、陈云、陈赓等也被追杀，或逃往莫斯科，或逃往中共苏区。</p>
-<p>无疑，顾顺章的背叛给中共造成了严重损失，中共为此发出了通缉令，并在几个月后，由周恩来主使，亲自指挥对顾顺章进行报复，其家人及当时在顾家的人员共十多人都被中共特科红队人员杀死，其中包括周恩来的救命恩人斯励。而前前后后被中共杀死的顾顺章的家人、亲友和相关人员公30多人。后因参与暗杀的中共特科人员王世德被抓，供出了埋尸地点，并带租界人员和警察去掘尸，遂成为轰动上海乃至国内的“海棠村掘尸案”，而中共的罪行曝光后，也让许多上海市民改变了对中共的看法。</p>
+<p>顾为人狡猾多智、沉默寡言、但比较精明能干，曾杀死过许多叛离中共的人员，声名远扬。他的公开身份是著名魔术师化广奇，后在一次表演时被国民党识破，被捕。他在被捕后，很快供出了中共在武汉的地下交通机关和红二军团驻武汉办事处，致使十多人被捕被杀。随后在要求面见蒋介石后，又供出了中共中央在上海的机关和主要领导人，包括在上海从事情报工作的周恩来也差点被俘，致使当时上海等地的地下党机构几乎完全被摧毁，多人被捕杀。因顾顺章被杀的中共领导人有恽代英、蔡和森、盛忠亮、黄文杰，其他领导人王明、康生、博古、张闻天、陈云、陈赓等也被追杀，或逃往莫斯科，或逃往中共苏区。</p>
+<p>无疑，顾顺章的背叛给中共造成了严重损失，中共为此发出了通缉令，并在几个月后，由周恩来主使，亲自指挥对顾顺章进行报复，其家人及当时在顾家的人员共十多人都被中共特科红队人员杀死，其中包括周恩来的救命恩人斯励。而前前后后被中共杀死的顾顺章的家人、亲友和相关人员共三十多人。后因参与暗杀的中共特科人员王世德被抓，供出了埋尸地点，并带租界人员和警察去掘尸，遂成为轰动上海乃至国内的“海棠村掘尸案”，而中共的罪行曝光后，也让许多上海市民改变了对中共的看法。</p>
 <p>立下大功的顾顺章其后在南京开设了间谍技术训练班，编写教科书《特务工作之理论与实际》，应对中共。1933年，国民党军统局长戴笠将其借调去负责军统的筹备训练工作。</p>
 <p>与中共说其死于监狱不同，关于顾顺章的真正死因，并没有定论。1934年，顾顺章失踪，随后确认被杀，至于死因有说法指其私下抱怨国民党比共产党还坏，欲成立“新共产党”，被手下告密，顾欲利用戴笠抗衡徐恩曾，结果再次被告密，所以被杀。徐恩曾是国民党中统局长。</p>
 <p>另据徐恩曾在《我和共产党战争的回忆》一书中写到，顾顺章“因和敌人重新勾结而被处刑”，即因与中共联络被杀。如果这一说法成立，中共所言的顾顺章在监狱中被处死，也说的通，但内幕应该是因为其再次背叛国民党，而非因为背叛中共。</p>
 <p>顾顺章虽然死了，但其给中共的重创迄今中共都没有忘记，否则又如何将其作为叛党的典型？！</p>
-<p><strong>反共元老叶青</strong> <strong>直击中共要害</strong></p>
+<h2><strong>反共元老叶青</strong> <strong>直击中共要害</strong></h2>
 <p>在中共早期领导人中，有一个大名叫任卓宣，笔名为叶青的，当下的中国人估计很多人并不知晓。他戏剧性的人生在于：早年加入中共，后背叛中共，加入国民党，并在台湾四十年如一日的坚持“反共”，撰写了大量批判中共的文章。</p>
 <p>任卓宣，1896年出生于四川南充。中学毕业后受陈独秀《新青年》等影响，思想趋于激进，其后去法国留学。1922年与周恩来、陈延年等发起组织“中国少年共产党”，创办《少年》。不久，加入法国共产党，并成为旅欧中国社会主义青年团团员。</p>
 <p>1925年，中共秘密成立了旅欧支部，任卓宣任支部书记，支部机关驻法国巴黎。其后，因任卓宣组织领导声援国内五卅运动的斗争而被法国当局逮捕，并被驱逐出境，他前往莫斯科中山大学学习。</p>
@@ -39,57 +40,57 @@
 <p>晚年叶青在《我为什么反共？》一文中，回顾了其人生经历：旅欧回国之后，“一面参加共产党的工作，一面也参加国民党的工作。后来因国民党清党，自然脱离了国民党。由于共产党实行盲动主义，盲动的结果，大批党员被捕，甚至被杀，也自然脱离了共产党。我也是这样。当时深感盲动主义之不当，它以党员为牺牲，以群众为刍狗。”</p>
 <p>基于此，他说：“我反共是为了国家，为了中国。从前在法国赞成社会主义，加入共产党，是为了参加劳动，同情工人，乃基于局部的事实。现在知识广，经验多，了解中国的历史趋势，亦即了解全部的事实，自然根据中国需要，从事反共了。”</p>
 <p>也就是说，叶青是在深刻认识到中共的问题后，才义无反顾的走上了反共之路，并终身反共，因此被称为“反共元老”、“反共专家”和“反共教父”。</p>
-<p>他还在《我反共经验的总结》一文中总结道：“我反共约有四十五年之久，已分成我在上海反共、在武汉反共、在重庆反共、在南京上海广州反共、在台北反共五期……可以说，用笔墨唇舌反共，在中国究竟有几人如此，而且又历时四十五年未尝停止或间断呢？”</p>
+<p>他还在《我反共经验的总结》一文中总结道：“我反共约有四十五年之久，已分成我在上海反共、在武汉反共、在重庆反共、在南京上海广州反共、在台北反共五期??可以说，用笔墨唇舌反共，在中国究竟有几人如此，而且又历时四十五年未尝停止或间断呢？”</p>
 <p>事实也的确如此。坚持反共近半个世纪，著述逾千万字的叶青，某种意义上堪称20世纪“反共之第一人”。尽管中共官媒对其大加鞭挞，但如此叶青还是让中共怕了几十年。</p>
-<p><strong><ahref="https://github.com/nvtqmy391/djy/blob/master/gb/tag/%E4%BF%9E%E5%BC%BA%E5%A3%B0.md#1">俞强声</a>叛逃</strong> <strong>潜伏美国最高级别间谍自杀</strong></p>
-<p>1985年，中共国家安全部司长<ahref="https://github.com/nvtqmy391/djy/blob/master/gb/tag/%E4%BF%9E%E5%BC%BA%E5%A3%B0.md#1">俞强声</a>、也是前中共政治局常委俞正声的哥哥投奔美国，其给中共造成的最大重创是，中共潜伏在美国中情局40多年的最高级别间谍金无怠被逮捕。虽然中共对此极力否认，但2015年美国之音卫视播出的解密时刻抛出的美国秘档，证实了金无怠确是中共高级间谍等五件事。</p>
+<h2><strong><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BF%9E%E5%BC%BA%E5%A3%B0.md#1">俞强声</a>叛逃</strong> <strong>潜伏美国最高级别间谍自杀</strong></h2>
+<p>1985年，中共国家安全部司长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BF%9E%E5%BC%BA%E5%A3%B0.md#1">俞强声</a>、也是前中共政治局常委俞正声的哥哥投奔美国，其给中共造成的最大重创是，中共潜伏在美国中情局四十多年的最高级别间谍金无怠被逮捕。虽然中共对此极力否认，但2015年美国之音卫视播出的解密时刻抛出的美国秘档，证实了金无怠确是中共高级间谍等五件事。</p>
 <p>金无怠1922年出生于北京，燕京大学新闻系毕业；1938年开始在美国驻上海领事馆担任译员，1944年被周恩来收为中共间谍，潜伏在美国情报机构长达37年，是美国中央情报局亚洲部前负责人。他曾将美国很多最高保密等级的文件偷拍成微型胶卷秘密交给中国，直到金退休四年后，才被逮捕。</p>
 <p>金无怠被捕后，于1986年2月被陪审团裁定其所有17项罪名成立，包括6项间谍罪和11项欺诈和逃税罪，并定于当年3月4日判刑。其后，金无怠呼吁中共像美国与前苏联那样交换间谍，让自己回到中国，并拟派自己的妻子前往中国找邓小平疏通。但中共外交部发言人李肇星说：“金无怠事件是美国反华势力编造的。”“我们同那个人没有关系。”不久后，金无怠自杀。</p>
 <p>根据美国的解密档案，通过俞强声提供的情报，美国联邦调查局逐渐拼出了金无怠的活动轨迹，特别是发现了其几次前往香港和中国大陆会见中共高级特工的秘密。为了获得最为有效的证据，美国联邦调查局探员进行了成功的讯问，金无怠承认其为红色间谍，而美国当局亦从其日记等几大箱证物中发现了诸多证据，比如从中共收取的报酬等。</p>
-<p>此外，解密档案还显示，金无怠出卖了美国安插在大陆的线人，导致他们被捕。至于其自杀也存在疑点。金无怠自杀前会见的最后一名访客，是与中共关系密切的报纸《中报》的记者，其被怀疑是其自杀的推手，因为“除非有人暗示他是时候结束这一切了，否则他应该不会这么做。”</p>
+<p>此外，解密档案还显示，金无怠出卖了美国安插在大陆的线人，导致他们被捕。至于其自杀也存在疑点。金无怠自杀前会见的最后一名访客，是与中共关系密切的报纸《中报》的记者，其被怀疑是其自杀的推手，因为“除非有人暗示他是时候结束这一切了，否则他应该不会这么做”。</p>
 <p>金无怠之死，给中共的打击显然不小，而对于叛逃者俞强声也是恨之入骨，曾派国安杀手对其进行暗杀。尽管中共称已将其杀死，但解密档案显示，俞强声应该更换了身份，还活在世界的某个角落。</p>
 <p>而日前美媒披露的中共史上最高级别叛逃者，据悉已与美国国防情报局合作了3个月，并向美方透露了关于中共病毒（武汉病毒、新冠病毒）和中共生物武器计划等情报，其又将给中共带来怎样的重创呢？是否会远超其前辈？</p>
-<p>责任编辑：莆山</p>
+<p>责任编辑：莆山＃</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/12/8/25/n3667906.md#1">揭秘俞正声兄俞强声叛逃美国间谍案内幕</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/16/1/20/n4621188.md#1">【真实的周恩来之一】顾顺章灭门惨案</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/17/1/2/n8657420.md#1">沉船计划曝光 传中共85%高官随时准备出逃</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/20/n13034811.md#1">叶书：中共百年“党罄” 高官叛逃吹响末日前奏</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/8/25/n3667906.md#1">揭秘俞正声兄俞强声叛逃美国间谍案内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/20/n4621188.md#1">【真实的周恩来之一】顾顺章灭门惨案</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/1/2/n8657420.md#1">沉船计划曝光 传中共85%高官随时准备出逃</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/20/n13034811.md#1">叶书：中共百年“党罄” 高官叛逃吹响末日前奏</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10746220.md#1" target="_blank">觅真：真诚的感恩浸透着民心所向</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/5/n10026687.md#1" target="_blank">金剑：秦朝以后的中国是半民主社会</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10902768.md#1" target="_blank">美向联合国提出关注 促中共停止迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/15/n13022866.md#1">女子年幼时“溺毙” 感悟自己曾是高层生命</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/9/n13008956.md#1">端午节俗蕴藏哪些阴阳五行的道理？</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/11/n13016050.md#1">【未解之谜】亚特兰大石头山神秘的龙珠</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/6/n13002603.md#1">才华耀世的苏轼小时候改了老师的诗 师也自叹不如</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/10/n13011671.md#1">一代风流才子袁枚的四世人生 悔不当初转生改过</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13031878.md#1">【首播】前军报记者：经历六四 认清党军</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/19/n13033482.md#1">【时事军事】中共空军J-20 的真面目</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13032045.md#1">【横河观点】董经纬两个报导 哪个是真的？</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13031093.md#1">【拍案惊奇】普京笑答中共武统 让北京失望了？</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/17/n13029606.md#1">【新闻看点】刘鹤传接烫手山芋 习巨资走毛老路？</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13029922.md#1">以色列发现保存完整千年鸡蛋 震惊考古学家</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/17/n13029756.md#1">李英爱50岁近照超冻龄 10岁龙凤胎相貌曝光</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13031909.md#1">周冬雨首部古装剧翻车 大女主演成小丫鬟？</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13030745.md#1">糗挂总统3次电话 贾永婕：不怕委屈继续努力</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13031768.md#1">侯昌明夫妇做50个便当送医护 亲自下厨网赞爆</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13031642.md#1">莫德纳疫苗效力有多久？副作用和禁忌一次看</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13030619.md#1">马斯克在面试时问的烧脑问题 看你会不会？</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/18/n13030846.md#1">500年草绳桥坍塌 秘鲁人以传统编织技艺重建</a></li>
-<li><a href="https://github.com/nvtqmy391/djy/blob/master/gb/21/6/19/n13033103.md#1">【重播】疫苗是防重症还是防感染？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nvtqmy391/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nvtqmy391/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/20/n13035206.htm">林辉：背叛中共的三名高官带来的重创</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/20/n13035206.htm">林辉：中共三名高官叛逃带来的重创</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nvtqmy391/djy/blob/master/gb/21/6/20/n13035206.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nvtqmy391/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nvtqmy391/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nvtqmy391/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nvtqmy391/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nvtqmy391/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/20/n13035206.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
